--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "comment.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo \"This project does not have a build step\""
+
   },
   "keywords": [],
   "author": "",
