contact page update

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3000
 MONGO_URL=mongodb+srv://mohitkediawebtrial:mohitkediawebtrial@cluster0.1ojfc5h.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+EMAIL=ekatva.jain@gmail.com
+EMAIL_PASSWORD=gdwr fvex zzgu nzxk
