--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "website",
+  "name": "mohit-kedia-website",
   "version": "1.0.0",
-  "description": "",
-  "main": "comment.js",
+  "description": "Official website for Mohit Kedia & Associates",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "echo \"This project does not have a build step\""
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chokidar": "^3.5.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.3",
-    "nodemailer": "^6.9.14"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "mammoth": "^1.6.0",
+    "marked": "^11.1.1",
+    "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
